tests/baselines/reference/parserDoStatement1.d.errors.txt
parserDoStatement1.d.ts(1,1): error TS1036: Statements are not allowed in ambient contexts.
parserDoStatement1.d.ts(3,8): error TS2304: Cannot find name 'e'.


==== parserDoStatement1.d.ts (2 errors) ====
    do {
    ~~
!!! error TS1036: Statements are not allowed in ambient contexts.
    }
    while (e);
           ~
!!! error TS2304: Cannot find name 'e'.